# fidelis

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
examples/: acme_users.csv  example_csv.py  example_enrichment.py  example_records.py
examples/fuel_prices/: .gitignore  README.md  hooks.py  models.py  run.py
examples/fuel_prices/data/: vendor_bp_eu.csv  vendor_multi_eu.csv  vendor_shell_us.csv  vendor_wfs_intl.csv
examples/fuel_prices/specs/: spec_bp_eu.yaml  spec_multi_eu.yaml  spec_shell_us.yaml  spec_wfs_intl.yaml
examples/showcase/: README.md
examples/showcase/01_basic/: basic_users.yaml  data.csv  run.py
examples/showcase/02_enrichment/: contacts.yaml  data.csv  run.py
examples/showcase/03_expand/: data.csv  routes.yaml  run.py
examples/showcase/04_unpivot/: data.csv  quarterly.yaml  run.py
examples/showcase/05_rules/: data.csv  ledger.yaml  run.py
examples/showcase/06_advanced/: data.csv  fuel.yaml  run.py
fidelis/: __init__.py  cli.py  column.py  dedup.py  drift.py  enrichment.py  expand.py  infer_model.py  mapping.py  normalize.py  parser.py  quarantine.py  result.py  runtime.py  spec.py  store.py  transforms.py  validate.py
fidelis/llm/: __init__.py  anthropic.py  base.py  fake.py  inference.py  local.py  openai.py
fidelis/sources/: __init__.py  base.py  connectors.py  csv_source.py  excel_source.py  json_source.py  records_source.py
specs/: partner_acme_users.yaml
tests/: conftest.py  test_acceptance.py  test_batch_enrichment.py  test_cli.py  test_column_steps.py  test_connectors_output.py  test_context.py  test_coverage.py  test_dedup.py  test_domain_hints.py  test_drift.py  test_enrichment.py  test_expand.py  test_infer_model.py  test_llm.py  test_mapping_validate.py  test_mapping_value_and_source.py  test_multi_target.py  test_parser_integration.py  test_quarantine.py  test_rules.py  test_skip_clip.py  test_sources.py  test_spec.py  test_spec_driven_steps.py  test_spec_store.py  test_transforms.py  test_unpivot.py
